--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="../assets/scss/all.scss">
 </head>
@@ -55,10 +56,10 @@
       </div>
       <ul class="lesson-group">
         <li class="row lesson-item" data-aos="fade-right" data-aos-duration="2000">
-          <div class="col-7 p-0">
+          <div class="col-12 col-md-7 p-0">
             <img src="../assets/images/index_1.jpg" alt="">
           </div>
-          <div class="col-4 p-0">
+          <div class="col-12 col-md-4 p-0">
             <div class="lesson-info d-flex flex-column justify-content-center">
               <h3 class=" fs-1">01</h3>
               <h4 class="fs-3 fw-bolder">重量訓練課程</h4>
@@ -69,10 +70,10 @@
           </div>
         </li>
         <li class="row flex-row-reverse pt-4 lesson-item" data-aos="fade-left" data-aos-duration="2000">
-          <div class="col-7 p-0">
+          <div class="col-12 col-md-7 p-0">
             <img src="../assets/images/index_2.jpg" alt="">
           </div>
-          <div class="col-4 p-0">
+          <div class="col-12 col-md-4 p-0">
             <div class="d-flex flex-column justify-content-center lesson-info">
               <h3 class=" fs-1">02</h3>
               <h4 class="fs-3 fw-bolder">肌力循環訓練課程</h4>
@@ -82,11 +83,11 @@
             </div>
           </div>
         </li>
-        <li class="row pt-4 lesson-item" data-aos="fade-right" data-aos-duration="2000">
-          <div class="col-7 p-0">
+        <li class="row pt-4 lesson-item pb-4 pb-md-0" data-aos="fade-right" data-aos-duration="2000">
+          <div class="col-12 col-md-7 p-0">
             <img src="../assets/images/index_3.jpg" alt="">
           </div>
-          <div class="col-4 p-0 ps-1">
+          <div class="col-12 col-md-4 p-0 ps-1">
             <div class="d-flex flex-column justify-content-center lesson-info">
               <h3 class=" fs-1">03</h3>
               <h4 class="fs-3 fw-bolder">有氧團體課程</h4>
@@ -103,7 +104,7 @@
     <div class="container-md wahtWeDo-section">
       <div class="title">
         <h2 class="fs-2" style="color: #7E7E7E;">WHAT WE DO</h2>
-        <h4 class="fs-2">全方位健身：重塑肌力、優化飲食、提升耐力</h4>
+        <h4 class="fs-5 fs-md-2">全方位健身：重塑肌力、優化飲食、提升耐力</h4>
       </div>
 
       <div class="card-group">
@@ -112,7 +113,7 @@
             <img src="../assets/images/icon_dumbbell_2.png" class="card-img-top" alt="training">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-3">專業重量訓練</h5>
+            <h5 class="card-title fs-5 fs-md-3">專業重量訓練</h5>
             <p class="card-text">
               專業教練團隊提供科學化的重量訓練課程，針對不同程度的健身愛好者量身定制。通過漸進式負重和個性化計劃，有效增強肌力、塑造理想體態，全面提升您的身體素質。
             </p>
@@ -123,7 +124,7 @@
             <img src="../assets/images/icon_nutrition_2.png" class="card-img-top" alt="nutrition">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-3">均衡營養指導</h5>
+            <h5 class="card-title fs-5 fs-md-3">均衡營養指導</h5>
             <p class="card-text">
               我們的營養專家根據您的身體狀況、訓練目標和生活方式，制定個性化飲食計劃。從宏量到微量營養素，全方位指導助您在訓練中保持最佳狀態，加速恢復，實現健康塑身目標。
             </p>
@@ -134,7 +135,7 @@
             <img src="../assets/images/icon_yoga_2.png" class="card-img-top" alt="stretch">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-3">高效有氧運動</h5>
+            <h5 class="card-title fs-5 fs-md-3">高效有氧運動</h5>
             <p class="card-text">
               結合最新間歇訓練技術和多樣化器械，我們的有氧課程旨在提升心肺功能和新陳代謝。無論您的目標是減重、提高體能還是改善心血管健康，都能享受專業、有趣且富有挑戰的訓練體驗。
             </p>
@@ -173,6 +174,7 @@
       <script>
         AOS.init();
       </script>
+
       <script type="module" src="../main.js"></script>
 
 </body>
