--- a/pages/index.html
+++ b/pages/index.html
@@ -104,7 +104,7 @@
     <div class="container-md wahtWeDo-section">
       <div class="title">
         <h2 class="fs-2" style="color: #7E7E7E;">WHAT WE DO</h2>
-        <h4 class="fs-5 fs-md-2">全方位健身：重塑肌力、優化飲食、提升耐力</h4>
+        <h4 class="fs-2">全方位健身：重塑肌力、優化飲食、提升耐力</h4>
       </div>
 
       <div class="card-group">
@@ -113,7 +113,7 @@
             <img src="../assets/images/icon_dumbbell_2.png" class="card-img-top" alt="training">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-5 fs-md-3">專業重量訓練</h5>
+            <h5 class="card-title fs-3">專業重量訓練</h5>
             <p class="card-text">
               專業教練團隊提供科學化的重量訓練課程，針對不同程度的健身愛好者量身定制。通過漸進式負重和個性化計劃，有效增強肌力、塑造理想體態，全面提升您的身體素質。
             </p>
@@ -124,7 +124,7 @@
             <img src="../assets/images/icon_nutrition_2.png" class="card-img-top" alt="nutrition">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-5 fs-md-3">均衡營養指導</h5>
+            <h5 class="card-title fs-3">均衡營養指導</h5>
             <p class="card-text">
               我們的營養專家根據您的身體狀況、訓練目標和生活方式，制定個性化飲食計劃。從宏量到微量營養素，全方位指導助您在訓練中保持最佳狀態，加速恢復，實現健康塑身目標。
             </p>
@@ -135,7 +135,7 @@
             <img src="../assets/images/icon_yoga_2.png" class="card-img-top" alt="stretch">
           </div>
           <div class="card-body">
-            <h5 class="card-title fs-5 fs-md-3">高效有氧運動</h5>
+            <h5 class="card-title fs-3">高效有氧運動</h5>
             <p class="card-text">
               結合最新間歇訓練技術和多樣化器械，我們的有氧課程旨在提升心肺功能和新陳代謝。無論您的目標是減重、提高體能還是改善心血管健康，都能享受專業、有趣且富有挑戰的訓練體驗。
             </p>
