--- a/pages/about.html
+++ b/pages/about.html
@@ -4,12 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>SHARK GYM</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="stylesheet" href="../assets/scss/all.scss">
   </head>
   <body>
     <%- include('./layout/header'); -%>
-    <h1>我是about</h1>
+    <div class="coach-section container-fluid">
+      <div class="row justify-content-center m-0">
+        <div class="col-11 col-md-8 d-flex coach-item mb-4 mb-md-5" data-aos="fade-left" data-aos-duration="2000">
+          <div class="imgContainer d-flex align-items-center">
+            <img src="../assets/images/about_1-1.jpg" alt="coach sandra">
+          </div>
+          <div class="coach-info d-flex flex-column justify-content-center">
+            <h2>SANDRA LEE</h2>
+            <h5>健身營養調配與女性肌力專長提升</h5>
+            <p>作為一名專注於女性健康的健身教練，我深知營養與訓練的平衡對於女性肌力提升的重要性。我擁有營養學學位和多年的實戰經驗，能夠為每位女性客戶量身定制營養計劃，確保在增肌的同時保持身體曲線的優雅。我的目標是幫助更多女性突破體能極限，在健康和美麗的道路上不斷進步。</p>
+          </div>
+        </div>
+        <div class="col-11 col-md-8 d-flex column-reverse coach-item" data-aos="fade-right" data-aos-duration="2000">
+          <div class="coach-info d-flex flex-column justify-content-center">
+            <h2>JACK WANG</h2>
+            <h5>個性化運動計劃與健力三項指導</h5>
+            <p>我擁有豐富的比賽經驗和教學資歷。每個運動員的身體條件和目標都是獨一無二的，因此我特別注重為每位客戶制定個性化的訓練計劃。無論您是初學者還是資深運動員，我都能幫助您在深蹲、臥推和硬拉三大項目上取得顯著進步。讓我們一起突破極限，達成看似不可能的目標！</p>
+          </div>
+          <div class="imgContainer bg-to-right bg-to-right d-flex align-items-center">
+            <img src="../assets/images/about_1-2.jpg" alt="coach jack">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="intro-section container-fluid">
+      <h2>教練能帶給你什麼？不只是訓練那麼簡單</h2>
+      <h5>健身教練透過個性化運動計劃與營養指導，幫助學員達成健康目標。他們根據個人需求設計專屬課程，並持續監控與調整計劃。</h5>
+      <img src="../assets/images/about_2.jpg" alt="fitness guy">
+    </div>
+
+
+    <div class="subscribe-section container-fluid">
+      <div class="subscribe-block">
+        <h2 class="animate__animated animate__tada animate__infinite animate__slow">獲取我們的免費飲食計劃 !</h2>
+        <h5>訂閱我們的電子報，免費獲得30天飲食計劃。您將獲得關於飲食、烹飪方法和食量的所有指導。</h5>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="請輸入您的電子郵件" aria-label="Recipient's email" aria-describedby="button-addon">
+          <input type="text" class="form-control" placeholder="請輸入您的姓名" aria-label="Recipient's username" aria-describedby="button-addon">
+          <button class="btn btn-submit" type="button" id="button-addon">訂閱</button>
+        </div>
+      </div>
+    </div>
+
     <%- include('./layout/footer'); -%>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script type="module" src="../main.js"></script>
   </body>
