--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,36 +5,154 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact</title>
+    <title>SHARK GYM</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="../assets/scss/all.scss">
 </head>
 
 <body>
     <%- include('./layout/header'); -%>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-        </button>
+
+        <div class="container-fluid blog-section">
+            <div class="row justify-content-center">
+                <ul class="col-md-6 blog-group">
+                    <li class="text-center">
+                        <h2>部落格專欄</h2>
+                        <h5>Lorem ipsum dolor sit amet!</h5>
+                    </li>
+                    <li class="blog-item d-flex">
+                        <img src="../assets/images/article_1.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/02/10</div>
+                                <div class="tag">健康與營養</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                    進入文章
+                                </button>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="blog-item d-flex">
+                        <img src="../assets/images/article_2.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/02/02</div>
+                                <div class="tag">教練專欄</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="blog-item d-flex">
+                        <img src="../assets/images/article_3.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/01/19</div>
+                                <div class="tag">重量訓練</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="blog-item d-flex">
+                        <img src="../assets/images/article_4.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/01/10</div>
+                                <div class="tag">健康與營養</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="blog-item d-flex">
+                        <img src="../assets/images/article_5.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2022/12/24</div>
+                                <div class="tag">成員故事</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="position-relative">
+                        <button type="button" class="btn btn-more">更多文章</button>
+                    </li>
+
+                </ul>
+                <aside class="col-md-2">
+                    <h2 class="text-center">全部文章</h2>
+                    <ul class="tag-group text-center">
+                        <a href="#">
+                            <li>教練專欄</li>
+                        </a>
+                        <a href="#">
+                            <li>訓練專區</li>
+                        </a>
+                        <a href="#">
+                            <li>健康與營養</li>
+                        </a>
+                        <a href="#">
+                            <li>成員故事</li>
+                        </a>
+                    </ul>
+                </aside>
+            </div>
+
+        </div>
+
+
 
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="../assets/images/cat.jpg" alt="cat">
+                        ...
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-primary">Understood</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <%- include('./layout/footer'); -%>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
 
             <script type="module" src="../main.js"></script>
 </body>
