blog article fliter by tag & blog page RWD

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -54,8 +54,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam at amet neque
+                                    beatae illo distinctio porro harum ex praesentium, repudiandae molestiae adipisci
+                                    optio minus dolore consectetur voluptatibus perferendis explicabo? Amet ut sequi
+                                    architecto, facilis dicta provident corrupti dolor, nesciunt nostrum eaque voluptas
+                                    at placeat possimus tenetur, soluta dolore. Animi id alias temporibus dicta eos ad
+                                    sunt totam iste itaque iusto.</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
