--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-86ab936c.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-89a5a5a8.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-40c7441a.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-628644f7.css">
 </head>
 
 <body>
@@ -74,16 +74,99 @@
 </header>
         <div class="container-fluid blog-section">
             <div class="row justify-content-center">
-                <ul class="col-md-6 blog-group">
+                <ul class="col-md-6 blog-group" id="article-list">
                     <li class="text-center">
                         <h2>部落格專欄</h2>
                         <h5>Lorem ipsum dolor sit amet!</h5>
                     </li>
-                    <li class="blog-item d-flex">
+                    <li>
+                        <aside class="col-md-2 col d-block d-md-none">
+                            <div class="tag-group text-center d-flex" id="tag-conainer">
+                                <button class="btn tag-all" vlaue="all-article">
+                                    全部文章
+                                </button>
+                                <button class="btn btn-tag" value="coach-column">
+                                    教練專欄
+                                </button>
+                                <button class="btn btn-tag" value="training-zone">
+                                    訓練專區
+                                </button>
+                                <button class="btn btn-tag" value="health-nutrition">
+                                    健康與營養
+                                </button>
+                                <button class="btn btn-tag" value="member-stroy">
+                                    成員故事
+                                </button>
+                            </div>
+                        </aside>
+                    </li>
+                    <li class="blog-item" data-tags="health-nutrition">
                         <img src="/MFEE-shark-gym-main/assets/article_1-c1719172.jpg">
                         <div class="blog-info">
                             <div class="date_tag_block d-flex">
                                 <div class="date">2024/02/10</div>
+                                <div class="tag">健康與營養</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam at amet neque
+                                    beatae illo distinctio porro harum ex praesentium, repudiandae molestiae adipisci
+                                    optio minus dolore consectetur voluptatibus perferendis explicabo? Amet ut sequi
+                                    architecto, facilis dicta provident corrupti dolor, nesciunt nostrum eaque voluptas
+                                    at placeat possimus tenetur, soluta dolore. Animi id alias temporibus dicta eos ad
+                                    sunt totam iste itaque iusto.</p>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                    進入文章
+                                </button>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="blog-item" data-tags="coach-column">
+                        <img src="/MFEE-shark-gym-main/assets/article_2-c7ac6b59.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/02/02</div>
+                                <div class="tag">教練專欄</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                    進入文章
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="blog-item" data-tags="training-zone">
+                        <img src="/MFEE-shark-gym-main/assets/article_3-f0282ac6.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/01/19</div>
+                                <div class="tag">訓練專區</div>
+                            </div>
+                            <div class="blog-content">
+                                <h4>文章標題</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
+                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                    進入文章
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="blog-item" data-tags="health-nutrition">
+                        <img src="/MFEE-shark-gym-main/assets/article_4-1d1bd11b.jpg">
+                        <div class="blog-info">
+                            <div class="date_tag_block d-flex">
+                                <div class="date">2024/01/10</div>
                                 <div class="tag">健康與營養</div>
                             </div>
                             <div class="blog-content">
@@ -97,51 +180,8 @@
                                 </button>
                             </div>
                         </div>
-
                     </li>
-                    <li class="blog-item d-flex">
-                        <img src="/MFEE-shark-gym-main/assets/article_2-c7ac6b59.jpg">
-                        <div class="blog-info">
-                            <div class="date_tag_block d-flex">
-                                <div class="date">2024/02/02</div>
-                                <div class="tag">教練專欄</div>
-                            </div>
-                            <div class="blog-content">
-                                <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="blog-item d-flex">
-                        <img src="/MFEE-shark-gym-main/assets/article_3-f0282ac6.jpg">
-                        <div class="blog-info">
-                            <div class="date_tag_block d-flex">
-                                <div class="date">2024/01/19</div>
-                                <div class="tag">重量訓練</div>
-                            </div>
-                            <div class="blog-content">
-                                <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="blog-item d-flex">
-                        <img src="/MFEE-shark-gym-main/assets/article_4-1d1bd11b.jpg">
-                        <div class="blog-info">
-                            <div class="date_tag_block d-flex">
-                                <div class="date">2024/01/10</div>
-                                <div class="tag">健康與營養</div>
-                            </div>
-                            <div class="blog-content">
-                                <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="blog-item d-flex">
+                    <li class="blog-item" data-tags="member-stroy">
                         <img src="/MFEE-shark-gym-main/assets/article_5-83dcc1ad.jpg">
                         <div class="blog-info">
                             <div class="date_tag_block d-flex">
@@ -152,6 +192,11 @@
                                 <h4>文章標題</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
                                     consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                    進入文章
+                                </button>
                             </div>
                         </div>
                     </li>
@@ -160,22 +205,24 @@
                     </li>
 
                 </ul>
-                <aside class="col-md-2">
-                    <h2 class="text-center">全部文章</h2>
-                    <ul class="tag-group text-center">
-                        <a href="#">
-                            <li>教練專欄</li>
-                        </a>
-                        <a href="#">
-                            <li>訓練專區</li>
-                        </a>
-                        <a href="#">
-                            <li>健康與營養</li>
-                        </a>
-                        <a href="#">
-                            <li>成員故事</li>
-                        </a>
-                    </ul>
+                <aside class="col-md-2 d-none d-md-block">
+                    <div class="tag-group text-center" id="tag-conainer">
+                        <button class="btn tag-all" vlaue="all-article">
+                            全部文章
+                        </button>
+                        <button class="btn btn-tag" value="coach-column">
+                            教練專欄
+                        </button>
+                        <button class="btn btn-tag" value="training-zone">
+                            訓練專區
+                        </button>
+                        <button class="btn btn-tag" value="health-nutrition">
+                            健康與營養
+                        </button>
+                        <button class="btn btn-tag" value="member-stroy">
+                            成員故事
+                        </button>
+                    </div>
                 </aside>
             </div>
 
