--- a/about.html
+++ b/about.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHARK GYM</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SHARK GYM</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   
-    <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-40c7441a.js"></script>
-    <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-628644f7.css">
-  </head>
-  <body>
-    <header class="container-md">
+  <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-a4c3be52.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
+</head>
+
+<body>
+  <header class="container-md">
     <nav class="row">
         <ul class="col col-md-8 d-none d-md-flex justify-content-between align-items-center w-100 navbar">
             <a href="../pages/index.html" class="nav-item" data-page="index">
@@ -81,14 +84,18 @@
           <div class="coach-info d-flex flex-column justify-content-center">
             <h2>SANDRA LEE</h2>
             <h5>健身營養調配與女性肌力專長提升</h5>
-            <p>作為一名專注於女性健康的健身教練，我深知營養與訓練的平衡對於女性肌力提升的重要性。我擁有營養學學位和多年的實戰經驗，能夠為每位女性客戶量身定制營養計劃，確保在增肌的同時保持身體曲線的優雅。我的目標是幫助更多女性突破體能極限，在健康和美麗的道路上不斷進步。</p>
+            <p>
+              作為一名專注於女性健康的健身教練，我深知營養與訓練的平衡對於女性肌力提升的重要性。我擁有營養學學位和多年的實戰經驗，能夠為每位女性客戶量身定制營養計劃，確保在增肌的同時保持身體曲線的優雅。我的目標是幫助更多女性突破體能極限，在健康和美麗的道路上不斷進步。
+            </p>
           </div>
         </div>
         <div class="col-11 col-md-8 d-flex column-reverse coach-item" data-aos="fade-right" data-aos-duration="2000">
           <div class="coach-info d-flex flex-column justify-content-center">
             <h2>JACK WANG</h2>
             <h5>個性化運動計劃與健力三項指導</h5>
-            <p>我擁有豐富的比賽經驗和教學資歷。每個運動員的身體條件和目標都是獨一無二的，因此我特別注重為每位客戶制定個性化的訓練計劃。無論您是初學者還是資深運動員，我都能幫助您在深蹲、臥推和硬拉三大項目上取得顯著進步。讓我們一起突破極限，達成看似不可能的目標！</p>
+            <p>
+              我擁有豐富的比賽經驗和教學資歷。每個運動員的身體條件和目標都是獨一無二的，因此我特別注重為每位客戶制定個性化的訓練計劃。無論您是初學者還是資深運動員，我都能幫助您在深蹲、臥推和硬拉三大項目上取得顯著進步。讓我們一起突破極限，達成看似不可能的目標！
+            </p>
           </div>
           <div class="imgContainer bg-to-right bg-to-right d-flex align-items-center">
             <img src="/MFEE-shark-gym-main/assets/about_1-2-dc0d3be4.jpg" alt="coach jack">
@@ -109,8 +116,10 @@
         <h2 class="animate__animated animate__tada animate__infinite animate__slow">獲取我們的免費飲食計劃 !</h2>
         <h5>訂閱我們的電子報，免費獲得30天飲食計劃。您將獲得關於飲食、烹飪方法和食量的所有指導。</h5>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="請輸入您的電子郵件" aria-label="Recipient's email" aria-describedby="button-addon">
-          <input type="text" class="form-control" placeholder="請輸入您的姓名" aria-label="Recipient's username" aria-describedby="button-addon">
+          <input type="text" class="form-control" placeholder="請輸入您的電子郵件" aria-label="Recipient's email"
+            aria-describedby="button-addon">
+          <input type="text" class="form-control" placeholder="請輸入您的姓名" aria-label="Recipient's username"
+            aria-describedby="button-addon">
           <button class="btn btn-submit" type="button" id="button-addon">訂閱</button>
         </div>
       </div>
@@ -126,26 +135,27 @@
             </div>
             <ul class="col col-md-7 d-flex justify-content-between align-items-center mb-0">
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">課程專區</li>
+                    <li class="fs-3 fw-bolder">課程專區</li>
                 </a>
                 <a href="../pages/location.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">營業據點</li>
+                    <li class="fs-3 fw-bolder">營業據點</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">會員中心</li>
+                    <li class="fs-3 fw-bolder">會員中心</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">最新消息</li>
+                    <li class="fs-3 fw-bolder">最新消息</li>
                 </a>
             </ul>
         </nav>
     </div>
 </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
 
-    
-  </body>
+      
+</body>
+
 </html>
