--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-40c7441a.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-628644f7.css">
+    <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-a4c3be52.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
 </head>
 
 <body>
@@ -81,7 +82,7 @@
                     </li>
                     <li>
                         <aside class="col-md-2 col d-block d-md-none">
-                            <div class="tag-group text-center d-flex" id="tag-conainer">
+                            <div class="tag-group text-center d-flex">
                                 <button class="btn tag-all" vlaue="all-article">
                                     全部文章
                                 </button>
@@ -207,10 +208,10 @@
                 </ul>
                 <aside class="col-md-2 d-none d-md-block">
                     <div class="tag-group text-center" id="tag-conainer">
-                        <button class="btn tag-all" vlaue="all-article">
+                        <button type="button" class="btn btn-tags tag-all" value="all-article">
                             全部文章
                         </button>
-                        <button class="btn btn-tag" value="coach-column">
+                        <button type="button" class="btn btn-tag" value="coach-column">
                             教練專欄
                         </button>
                         <button class="btn btn-tag" value="training-zone">
@@ -233,18 +234,32 @@
         <!-- Modal -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                        <h5 class="modal-title" id="staticBackdropLabel">蔬果之王！彩虹飲食讓身體更健康</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        ...
+                        <p>五顏六色的蔬果不僅賞心悅目，更是健康飲食的最佳選擇。每一種顏色的蔬果都含有不同的植化素，對人體有獨特的保健功效。</p>
+                        <br>
+                        <ol>
+                            <li>紅色蔬果： 富含茄紅素，有助於預防心血管疾病和癌症。例如：番茄、紅蘿蔔、西瓜。</li>
+                            <li>橙色蔬果： 富含β-胡蘿蔔素，可以轉化為維生素A，對眼睛健康有益。例如：南瓜、橘子、芒果。</li>
+                            <li>黃色蔬果： 富含維生素C，能增強免疫力，抗氧化。例如：檸檬、香蕉、玉米。</li>
+                            <li>綠色蔬果： 富含葉綠素和膳食纖維，有助於排毒和促進腸道蠕動。例如：菠菜、青椒、奇異果。</li>
+                            <li>紫色蔬果： 富含花青素，具有抗氧化和抗炎作用。例如：茄子、藍莓、紫甘藍。</li>
+                        </ol>
+                        <br>
+                        <p>你吃對顏色了嗎？五彩繽紛的蔬果不僅賞心悅目，更是健康的最佳夥伴！彩虹飲食強調攝取各種顏色的蔬果，因為不同的顏色代表不同的植化素，能提供身體多種營養。例如，紅色的番茄富含茄紅素，有助於預防心血管疾病；綠色的菠菜富含葉綠素，能促進腸道蠕動；紫色的茄子則富含花青素，具有抗氧化的功效。
+                        </p>
+                        <br>
+                        <p>
+                            實踐彩虹飲食，不僅能均衡攝取各種營養素，還能增強免疫力、預防慢性疾病。每天至少吃五種顏色的蔬果，讓你的餐盤變得更加豐富多彩。記得選擇當季的蔬果，不僅新鮮美味，也能攝取到最豐富的營養喔！
+                        </p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
                     </div>
                 </div>
             </div>
@@ -260,16 +275,16 @@
             </div>
             <ul class="col col-md-7 d-flex justify-content-between align-items-center mb-0">
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">課程專區</li>
+                    <li class="fs-3 fw-bolder">課程專區</li>
                 </a>
                 <a href="../pages/location.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">營業據點</li>
+                    <li class="fs-3 fw-bolder">營業據點</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">會員中心</li>
+                    <li class="fs-3 fw-bolder">會員中心</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">最新消息</li>
+                    <li class="fs-3 fw-bolder">最新消息</li>
                 </a>
             </ul>
         </nav>
