--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-40c7441a.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-628644f7.css">
+  <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-a4c3be52.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
 </head>
 
 
@@ -106,8 +107,8 @@
     <!-- 課程介紹 -->
     <div class="container-fluid lesson-section">
       <div class="title">
-        <h2 class="fs-2 fw-bold">課程介紹</h2>
-        <h4 class="fs-6">多樣化課程，滿足不同需求，激發運動潛能</h4>
+        <h2 class="fs-1 fw-bold">課程介紹</h2>
+        <h4 class="fs-5">多樣化課程，滿足不同需求，激發運動潛能</h4>
       </div>
       <ul class="lesson-group">
         <li class="row lesson-item" data-aos="fade-right" data-aos-duration="2000">
@@ -117,8 +118,8 @@
           <div class="col-12 col-md-4 p-0">
             <div class="lesson-info d-flex flex-column justify-content-center">
               <h3 class=" fs-1">01</h3>
-              <h4 class="fs-3 fw-bolder">重量訓練課程</h4>
-              <p class="fs-6">
+              <h4 class="fs-2 fw-bolder">重量訓練課程</h4>
+              <p class="fs-4">
                 專業教練指導下的科學重量訓練，針對個人目標定制計劃。涵蓋自由重量、機械、以及功能性訓練，全面鍛煉各大肌群。採用漸進式負荷原則，安全有效增肌塑形。課程著重正確動作和呼吸技巧，提高訓練效果並預防受傷，適合各級健身愛好者。
               </p>
             </div>
@@ -131,8 +132,8 @@
           <div class="col-12 col-md-4 p-0">
             <div class="d-flex flex-column justify-content-center lesson-info">
               <h3 class=" fs-1">02</h3>
-              <h4 class="fs-3 fw-bolder">肌力循環訓練課程</h4>
-              <p class="fs-6">
+              <h4 class="fs-2 fw-bolder">肌力循環訓練課程</h4>
+              <p class="fs-4">
                 結合重量訓練和有氧運動優點的高效率訓練方式。基於間歇原理，快速切換力量動作，同時增肌提升心肺功能。每節課包含8至10個全身訓練動作，強度可調整。肌力循環訓練課程具有高強度、多樣化的特性，能夠有效燃脂，改善協調性和靈活性，是打造精實體態的理想選擇。
               </p>
             </div>
@@ -145,8 +146,8 @@
           <div class="col-12 col-md-4 p-0 ps-1">
             <div class="d-flex flex-column justify-content-center lesson-info">
               <h3 class=" fs-1">03</h3>
-              <h4 class="fs-3 fw-bolder">有氧團體課程</h4>
-              <p class="fs-6">
+              <h4 class="fs-2 fw-bolder">有氧團體課程</h4>
+              <p class="fs-4">
                 充滿活力的團體訓練，提升心肺功能和整體健康。課程多樣，包括韻律舞蹈、彈跳床、以及飛輪等。在動感音樂中享受運動樂趣，提高新陳代謝，助攻體重管理。每節課程包含熱身、主要運動以及放鬆環節，確保安全及效率。適合各年齡段和體能水平的學員參與。
               </p>
             </div>
@@ -210,16 +211,16 @@
             </div>
             <ul class="col col-md-7 d-flex justify-content-between align-items-center mb-0">
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">課程專區</li>
+                    <li class="fs-3 fw-bolder">課程專區</li>
                 </a>
                 <a href="../pages/location.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">營業據點</li>
+                    <li class="fs-3 fw-bolder">營業據點</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">會員中心</li>
+                    <li class="fs-3 fw-bolder">會員中心</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">最新消息</li>
+                    <li class="fs-3 fw-bolder">最新消息</li>
                 </a>
             </ul>
         </nav>
