--- a/location.html
+++ b/location.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact</title>
-    <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-40c7441a.js"></script>
-    <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-628644f7.css">
-  </head>
-  <body>
-    <header class="container-md">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SHARK GYM</title>
+  
+  <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
+  
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKpb-B0XjpjtnLEoG3R056GVe6FZLLMYQ&callback&libraries=places"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  
+
+
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/location-5dafd32f.js"></script>
+  <link rel="modulepreload" crossorigin href="/MFEE-shark-gym-main/assets/main-a4c3be52.js">
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
+</head>
+
+<body>
+  <header class="container-md">
     <nav class="row">
         <ul class="col col-md-8 d-none d-md-flex justify-content-between align-items-center w-100 navbar">
             <a href="../pages/index.html" class="nav-item" data-page="index">
@@ -63,7 +86,40 @@
         </ul>
     </div>
 
-</header>    <h1>我是contact</h1>
+</header>    <div class="map-section">
+
+      <h3>立即尋找附近的SHARK GYM !</h3>
+      <div id="map"></div>
+
+      <form id="address-form">
+        <label for="address"></label>
+        <input type="text" id="address" name="address" placeholder="請輸入您的地址">
+        <button type="submit" class="btn btn-address" data-bs-toggle="modal" data-bs-target="#staticBackdrop">我附近的SHARK
+          GYM</button>
+      </form>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">附近的SHARK GYM !</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div id="results-container" class="result-section"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-reserve" data-bs-dismiss="modal">立即預約參觀 !</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
     <footer class="w-100">
     <div class="container-md">
         <nav class="row d-flex justify-content-between">
@@ -74,21 +130,31 @@
             </div>
             <ul class="col col-md-7 d-flex justify-content-between align-items-center mb-0">
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">課程專區</li>
+                    <li class="fs-3 fw-bolder">課程專區</li>
                 </a>
                 <a href="../pages/location.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">營業據點</li>
+                    <li class="fs-3 fw-bolder">營業據點</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">會員中心</li>
+                    <li class="fs-3 fw-bolder">會員中心</li>
                 </a>
                 <a href="../pages/index.html" class="footer-item">
-                    <li class="fs-6 fs-md-3 fw-bolder">最新消息</li>
+                    <li class="fs-3 fw-bolder">最新消息</li>
                 </a>
             </ul>
         </nav>
     </div>
 </footer>
-    
-  </body>
+      <script>
+        (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
+          key: "0",
+          v: "weekly",
+          // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+          // Add other bootstrap parameters as needed, using camel case.
+        });
+      </script>
+
+      
+</body>
+
 </html>
